@@ -404,6 +404,25 @@
 		<Spanish>%d1[ICON_FOOD] = %d2[ICON_EATENFOOD]</Spanish>
 	</TEXT>
 	
+	<!-- Negative Health/Happy Rate -->
+	
+	<TEXT>
+		<Tag>INTERFACE_CITY_HEALTH_BAD</Tag>
+		<English>%d1[ICON_HEALTHY] &lt; %d2[ICON_UNHEALTHY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT][ICON_EATENFOOD]</English>
+		<French>%d1[ICON_HEALTHY] &lt; %d2[ICON_UNHEALTHY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT][ICON_EATENFOOD]</French>
+		<German>%d1[ICON_HEALTHY] &lt; %d2[ICON_UNHEALTHY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT][ICON_EATENFOOD]</German>
+		<Italian>%d1[ICON_HEALTHY] &lt; %d2[ICON_UNHEALTHY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT][ICON_EATENFOOD]</Italian>
+		<Spanish>%d1 [ICON_HEALTHY] &lt; %d2 [ICON_UNHEALTHY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT] [ICON_EATENFOOD]</Spanish>
+	</TEXT>
+	<TEXT>
+		<Tag>INTERFACE_CITY_UNHAPPY</Tag>
+		<English>%d1[ICON_HAPPY] &lt; %d2[ICON_UNHAPPY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT][ICON_ANGRYPOP]</English>
+		<French>%d1[ICON_HAPPY] &lt; %d2[ICON_UNHAPPY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT][ICON_ANGRYPOP]</French>
+		<German>%d1[ICON_HAPPY] &lt; %d2[ICON_UNHAPPY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT][ICON_ANGRYPOP]</German>
+		<Italian>%d1[ICON_HAPPY] &lt; %d2[ICON_UNHAPPY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT][ICON_ANGRYPOP]</Italian>
+		<Spanish>%d1 [ICON_HAPPY] &lt; %d2 [ICON_UNHAPPY] = [COLOR_WARNING_TEXT]%d3[COLOR_REVERT] [ICON_ANGRYPOP]</Spanish>
+	</TEXT>
+	
 	<!-- Whip Assist -->
 	
 	<TEXT>
